@@ -1,7 +1,7 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
-    id 'org.springframework.boot' version '3.3.3' apply false
+    id 'org.springframework.boot' version '3.3.4' apply false
     id 'io.spring.dependency-management' version '1.1.6'
     id "org.sonarqube" version "5.1.0.4882"
     id 'java'
@@ -49,6 +49,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 pmd {
